# TriVert-Project

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
src/: lib.rs
src/trivert_math/: Cargo.toml
src/trivert_math/src/: lib.rs  mathf.rs  rect.rs  vec2.rs  vec2f.rs  vec3f.rs  vec4f.rs
src/trivert_utility/: Cargo.toml
src/trivert_utility/src/: lib.rs  logger.rs
src/trivert_window/: Cargo.toml
src/trivert_window/src/: lib.rs  window.rs  window_interface.rs
src/trivert_window/src/_detail/: mod.rs  window_interface_null.rs
